--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,15 @@
 name: Generate Snake Animation
 
+# Add permissions for private repos
+permissions:
+  contents: write
+
 on:
   # Run automatically every 12 hours
   schedule:
     - cron: "0 */12 * * *"
 
+  # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 
   # Run on every push to main branch
@@ -27,16 +32,20 @@ jobs:
         with:
           github_user_name: RonyBubnovsky
           outputs: |
-            dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
+            dist/snake.svg?color_snake=#7C3AED&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353&color_empty=#161b22
+            dist/snake-dark.svg?palette=github-dark&color_snake=#7C3AED&color_empty=#161b22
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Push the generated files to the output branch
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to GitHub Pages
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git clone --single-branch --branch output https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git output-repo 2>/dev/null || git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git output-repo
+          cd output-repo
+          git checkout -b output 2>/dev/null || git checkout output
+          cp -r ../dist/* . 2>/dev/null || true
+          git add .
+          git commit -m "Update snake animation" || exit 0
+          git push origin output
